# KobaKNUDiploma_2024

clang-tools-extra/clang-tidy/misc/: CMakeLists.txt  CRAutogen.h  CustomizableRulesCheck.cpp  CustomizableRulesCheck.h  MiscTidyModule.cpp  Yaml.cpp
clang-tools-extra/clang-tidy/misc/CRAAutogen/: Autogen.cpp  CMakeLists.txt
clang-tools-extra/docs/: ReleaseNotes.rst
clang-tools-extra/docs/clang-tidy/checks/: list.rst
clang-tools-extra/docs/clang-tidy/checks/misc/: customizable-rules.rst
clang-tools-extra/test/clang-tidy/checkers/misc/: customizable-rules.cpp
clang/include/clang/ASTMatchers/: ASTMatchersInternal.h
